--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: "https://janczizikow.github.io/" # the base hostname & protocol for your si
 
 # SEO PLUGIN
 social:
-  name: Your Name
+  name: ERIC祝
   links:
     - https://twitter.com/BenBalter
     - https://www.facebook.com/ben.balter
